NFS_TASK/sts1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful
  serviceName: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              useradd -m user1
              while true; do
                ps -awx>> fisiere/file1.md
                sleep 10000;
              done
          securityContext:
            runAsUser: 1000  # User id of "user1" from /etc/passwd
            runAsGroup: 1000 # Group id user1 from /etc/group
          volumeMounts:
            - name: nfs-share
              mountPath: /srv/kubernetes
      volumes:
        - name: nfs-share
          persistentVolumeClaim:
            claimName: nfs-pvc
