NFS_TASK/sts2-2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful22
  namespace: namespace1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful22
  serviceName: stateful22
  template:
    metadata:
      labels:
        app: stateful22
    spec:
      nodeName: k3d-local-agent-1 
      containers:
        - name: apache-task5
          image: petrumariuta/apache-task5:0.0.1
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
          args:
            - |
              useradd -m user1
              key=1
              while true; do
                  variable=$(df -h)
                  echo "{\"$key\": \"$variable\"}" >> /srv/kubernetes/file2.json
                  key=$((key + 1))
                  cat /srv/kubernetes/file2.json > /var/www/html/index.html
                  ./start_apache.bash
              done

          volumeMounts:
            - name: pv-nfs
              mountPath: /srv/kubernetes
      volumes:
        - name: pv-nfs
          persistentVolumeClaim:
            claimName: nfs-pvc-claim-sts1


#ps -awx >> /fisiere/file1.md
#ps -awx >> /srv/kubernetes/file1.md

#          securityContext:
#            runAsUser: 1000  # User id of "user1" from /etc/passwd
#            runAsGroup: 1000 # Group id user1 from /etc/group
