NFS_TASK/sts2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful2
#  namespace: nfs-provisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful2
  serviceName: stateful2
  template:
    metadata:
      labels:
        app: stateful2
    spec:
      containers:
        - name: stateful
          image: petrumariuta/stateful:latest
          command:             
            - /bin/sh
            - -c
          args:
            - |
              useradd -m user2
              key=1
              while true; do
                  variable=$(df -h)
                  echo "{\"$key\": \"$variable\"}" >> /srv/kubernetes/file2.json
                  key=$((key + 1))
                  sleep 10000  
              done
#          securityContext:
#            runAsUser: 1000  # User id of "user1" from /etc/passwd
#            runAsGroup: 1000 # Group id user1 from /etc/group
          volumeMounts:
            - name: pv-nfs
              mountPath: /srv/kubernetes
      volumes:
        - name: pv-nfs
          persistentVolumeClaim:
            claimName: nfs-pvc-claim


#ps -awx >> /fisiere/file1.md
#ps -awx >> /srv/kubernetes/file1.md
