NFS_TASK/sts3.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful3
  namespace: namespace1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stateful3
  serviceName: stateful3
  template:
    metadata:
      labels:
        app: stateful3
    spec:
      containers:
        - name: stateful3
          image: petrumariuta/stateful:latest
          command:             
            - /bin/sh
            - -c
          args:
            - |
              useradd -m user3
              key=1
              while true; do
                  variable=$(ifconfig -a)
                  echo "{\"$key\": \"$variable\"}" >> /srv/kubernetes/file3.json
                  key=$((key + 1))
                  sleep 10000  
              done
#          securityContext:
#            runAsUser: 1000  # User id of "user1" from /etc/passwd
#            runAsGroup: 1000 # Group id user1 from /etc/group
          volumeMounts:
            - name: pv-nfs
              mountPath: /srv/kubernetes
      volumes:
        - name: pv-nfs
          persistentVolumeClaim:
            claimName: nfs-pvc-claim-sts1


#ps -awx >> /fisiere/file1.md
#ps -awx >> /srv/kubernetes/file1.md

#nw ->
