NFS_TASK/sts1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful11
  namespace: namespace1
spec:
  selector:
    app: stateful11
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
