NFS_TASK/sts2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful22
  namespace: namespace1
spec:
  selector:
    app: stateful22
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
