NFS_TASK/sts33_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful33
  namespace: namespace1
spec:
  selector:
    app: stateful33
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
