NFS_TASK/sts4_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateful4
spec:
  selector:
    app: stateful4
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
