NFS_TASK/sts33_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful33-server-ingress
  namespace: namespace1
spec:
  rules:
    - host: stateful33.local
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: stateful33
                port:
                  number: 80
  tls:
    - hosts:
        - stateful33.local
      secretName: tls-secret33
