NFS_TASK/sts4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful4-server-ingress
  namespace: namespace1
spec:
  rules:
    - host: stateful4.local
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: stateful4
                port:
                  number: 80
  tls:
    - hosts:
        - stateful4.local
      secretName: tls-secret1
