NFS_TASK/1networkPolicy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
  namespace: namespace1
spec:
  podSelector:
    matchLabels: {}
    #app: app=web-server
  policyTypes:
    - Ingress
    - Egress
#  ingress:
#    - from:
#        - namespaceSelector:
#            matchLabels:
#              name: namespace2
